--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
       <version>3.0.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.21</version>
+      <scope>runtime</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
